<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="title">Expense Tracker</string>
    <string name="amount">Amount</string>
    <string name="usd">USD</string>
    <string name="khr">KHR</string>
    <string name="category">Category</string>
    <string name="category_prompt">Select a category</string>
    <string name="add_category">+</string>
    <string name="remark">Remark</string>
    <string name="add_expense">Add Expense</string>
    <string name="select_currency">Select Currency</string>
    <string name="logo_name">Ny sreynit</string>
</resources>